--- a/_layouts/default.jade
+++ b/_layouts/default.jade
@@ -8,5 +8,4 @@ html(lang="en")
 		link(rel="stylesheet", type="text/css", href="foundation-icons/foundation-icons.css")
 		link(rel="stylesheet", type="text/css", href="css/mystyle.css")
 	body
-		<h1>Website about technologies, sciences, entertainment and design</h1>
-<p>We live in era where Isaac Asimov only dare to dream!</p>
+		{{content}}
