--- a/index.jade
+++ b/index.jade
@@ -1,12 +1,6 @@
-doctype html
-html(lang="en")
-	head
-		title Sinapsis
-		meta(charset="utf-8")
-		meta(name="viewport", content="width=device-width", initial-scale=1)
-		link(rel="stylesheet", type="text/css", href="css/foundation.css")
-		link(rel="stylesheet", type="text/css", href="foundation-icons/foundation-icons.css")
-		link(rel="stylesheet", type="text/css", href="css/mystyle.css")
-	body
-		h1 Website about technologies, sciences, entertainment and design
-		p We live in era where Isaac Asimov only dare to dream!
+---
+layout: default
+---
+
+h1 Website about technologies, sciences, entertainment and design
+p We live in era where Isaac Asimov only dare to dream!
