tweaking sass and css
adding 2 class of navigation bar in top and bottom, beautify its style,
change list-style-type and text-decoration to none.

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
-<nav class="navigation-bar">
+<nav class="navigation-bar {{include.navtype}}">
 		<ul>
-				<li><a href="{{site.baseurl}}/index.html">Home</a></li>
-				<li><a href="{{site.baseurl}}/blitznews.html">Blitz News</a></li>
-				<li><a href="{{site.baseurl}}/contact.html">Contact</a></li>
+				<li><a href="{{site.baseurl}}/index.html" class="{% if page.url == '/index.html'%} selected {% endif %}">Home</a></li>
+				<li><a href="{{site.baseurl}}/blitznews.html" class="{% if page.url == '/blitznews.html'%} selected {% endif %}">Blitz News</a></li>
+				<li><a href="{{site.baseurl}}/contact.html" class="{% if page.url == '/contact.html'%} selected {% endif %}">Contact</a></li>
 		</ul>
 </nav>
