--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,12 +10,12 @@
 		<container>
 			<header>
 				<h1>Explore with us!</h1>
-				{% include nav.html %}
+				{% include nav.html navtype='nav-top'%}
 			</header>
 			{{content}}
 			<footer>
 				<h1>Explore with us!</h1>
-				{% include nav.html %}
+				{% include nav.html navtype='nav-bottom'%}
 				<p>&copy; | 2015 | Gema Buj</p>
 			</footer>
 		</container>
