--- a/css/style.sass
+++ b/css/style.sass
@@ -4,4 +4,28 @@ html
 	font: normal 100%/1.4 Georgia, serif
 	margin-left: auto
 	margin-right: auto
-	width: 720px
+	width: 800px
+
+.selected
+	background-color: #FA4623
+	color: #FAF828
+	padding: 2px
+	border-radius: 5px
+
+.navigaton-bar ul
+	list-style-type: none
+	padding: 0
+
+a
+	text-decoration: none
+
+.nav-top
+	font-size: 1.5rem
+
+.nav-top li
+	display: inline-block
+	margin-right: 30px
+
+.nav-bottom li
+	display: inline-block
+	margin-right: 20px
