--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html {
   margin: 0;
-  padding: 0;
+  padding-top: 20px;
   font: normal 100%/1.4 Georgia, serif;
   margin-left: auto;
   margin-right: auto;
@@ -19,7 +19,7 @@ html {
 a {
   text-decoration: none; }
 
-.nav-top {
+.nav-top, .nav-bottom {
   font-size: 1.5rem; }
 
 .nav-top li {
@@ -29,5 +29,8 @@ a {
 .nav-bottom li {
   display: inline-block;
   margin-right: 20px; }
+
+header, footer {
+  text-align: center; }
 
 /*# sourceMappingURL=style.css.map */
